--- a/kkangPart5/app/src/main/res/layout/activity_another.xml
+++ b/kkangPart5/app/src/main/res/layout/activity_another.xml
@@ -17,4 +17,13 @@
         android:textSize="20dp"
         android:textColor="@color/colorPrimaryDark"/>
 
+    <Button
+        android:id="@+id/btClose"
+        android:layout_width="200dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        android:text="Close"
+        android:textStyle="bold"
+        android:textSize="20dp"/>
+
 </LinearLayout>
