--- a/ServiceExam/app/src/main/res/layout/activity_main.xml
+++ b/ServiceExam/app/src/main/res/layout/activity_main.xml
@@ -25,4 +25,10 @@
         android:onClick="onStartIntentService"
         android:text="인탠트 서비스 시작"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onStartForegroundService"
+        android:text="Foreground 서비스 시작"/>
+
 </LinearLayout>
